src/adhocracy_frontend/adhocracy_frontend/static/stylesheets/scss/components/_button.scss
@mixin button-base {
    @include inline-block;
    @include text-align(center);
    border: 0;
    cursor: pointer;
    font-size: $font-size-normal;
    font-weight: $font-weight-normal;
    height: $button-height * 1em;
    line-height: $button-height;
    overflow: hidden;
    padding: 0;
    text-decoration: none;
    white-space: nowrap;

    &:hover {
        text-decoration: none;
    }

    &[disabled] {
        @include opacity(0.5);
    }
}

/*doc
---
title: Button
name: button
category: Buttons
---

A normal button that triggers an action.

It may have the following states:

-   :focus
-   :hover
-   ng-disabled or :disabled

```html_example
<a class="button" href="">Link</a>
<button type="button" class="button">Button</button>
<input type="submit" class="button" value="Submit" />
<input type="submit" class="button" value="Disabled" disabled="disabled" />
```
*/

/*doc
---
title: Call-to-action button
name: button.button-cta
parent: button
---

A highlighted button. Each page should have one CTA at maxiumum.

```html_example
<a class="button-cta" href="">Link</a>
<button type="button" class="button-cta">Button</button>
<input type="submit" class="button-cta" value="Submit" />
<input type="submit" class="button-cta" value="Disabled" disabled="disabled" />
```
*/

/*doc
---
title: Call-to-action button secondary
name: button.button-cta-secondary
parent: button
---

If more than one CTA is required per page, `button-cta-secondary` should
be used instead.

```html_example
<a class="button-cta-secondary" href="">Link</a>
<button type="button" class="button-cta-secondary">Button</button>
<input type="submit" class="button-cta-secondary" value="Disabled" disabled="disabled" />
```
*/

.button {
    @include button-base;
    background: transparent;
    color: $color-button-text;
    text-transform: uppercase;

    &:hover:enabled,
    &:focus:enabled {
        color: $color-button-text-hover;
    }
}

.button-cta,
.button-cta-secondary {
    @include button-base;
    background: $color-button-cta-base;
    color: $color-button-cta-text;
    padding: 0 1em;
    min-width: 110px / $font-size-normal * 1em;

    &:hover:enabled,
    &:focus:enabled {
        background: $color-button-cta-hover-background;
        color: $color-button-cta-text;
    }

    &:active:enabled {
        background-color: $color-button-cta-active-background;
    }
}

.button-cta-secondary {
    background-color: transparent;
    border: 2px solid $color-button-cta-base;
    color: $color-button-cta-base;
    height: $button-height + 4px / $font-size-normal * 1em;
    line-height: $button-height + 4px / $font-size-normal;

    &:hover:enabled,
    &:focus:enabled {
        background-color: $color-button-cta-base;
    }
}

/*doc
---
title: Button add modifier
name: button.m-add
parent: button
---

Add a + sign to a button

```html_example
<button type="button" class="button-cta-secondary m-add">Add Paragraph</button>
```
*/

.button-cta,
.button-cta-secondary,
.button {
    &.m-add:before {
        content: "+ ";
    }
}

